# Newsletter-generator

./: README.md  test.html
newsletter_generator/: README.md  pyproject.toml
newsletter_generator/logs/: 2024-09-08_14-07-28_research_task.md  2024-09-08_14-07-29_edit_task.md  2024-09-08_14-07-29_newsletter_task.html
newsletter_generator/src/newsletter_generator/: crew.py  main.py
newsletter_generator/src/newsletter_generator/gui/: app.py
newsletter_generator/src/newsletter_generator/tools/: search.py
