[tool.poetry]
name = "newsletter_generator"
version = "0.1.0"
description = "Newsletter-generator using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }
langchain-anthropic = "^0.1.23"
langchain-groq = "^0.1.9"
streamlit = "^1.38.0"

[tool.poetry.scripts]
newsletter_generator = "newsletter_generator.main:run"
run_crew = "newsletter_generator.main:run"
train = "newsletter_generator.main:train"
replay = "newsletter_generator.main:replay"
test = "newsletter_generator.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
